# gphotos-export

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
gphotos_export/: __init__.py  auth.py  download.py  utils.py
tests/: test_utils.py
