[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "gphotos-export"
version = "0.1.0"
description = "Bulk-download your Google Photos library in original quality via undetected browser automation (Python/SeleniumBase)."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "John Pratt", email = "john@john-pratt.com" }]
keywords = ["google-photos", "gphotos", "backup", "download", "export", "seleniumbase", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = [
    "seleniumbase>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/jpratt9/gphotos-export"
Repository = "https://github.com/jpratt9/gphotos-export"
Issues = "https://github.com/jpratt9/gphotos-export/issues"

[project.scripts]
gphotos-export = "gphotos_export.download:main"
gphotos-export-login = "gphotos_export.auth:main"

[tool.setuptools]
packages = ["gphotos_export"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
